<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:clipToPadding="false"
	android:paddingTop="36dp"
	android:paddingBottom="40dp"
	tools:context="dev.ahmedmourad.sherlock.android.view.activity.MainActivity">
	
	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		
		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guideline4"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:layout_constraintGuide_begin="36dp" />
		
		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guideline5"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:layout_constraintGuide_end="36dp" />
		
		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/textInputLayout7"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:hintTextColor="@color/colorAccent"
			app:layout_constraintEnd_toStartOf="@+id/guideline5"
			app:layout_constraintStart_toStartOf="@+id/guideline4"
			app:layout_constraintTop_toTopOf="parent">
			
			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/display_name_edit_Text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:autofillHints="personName"
				android:fontFamily="sans-serif-light"
				android:hint="@string/your_name"
				android:imeOptions="actionNext"
				android:inputType="textPersonName"
				android:maxLines="1"
				tools:targetApi="o" />
		
		</com.google.android.material.textfield.TextInputLayout>
		
		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/textInputLayout8"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			app:hintTextColor="@color/colorAccent"
			app:layout_constraintEnd_toStartOf="@+id/guideline5"
			app:layout_constraintStart_toStartOf="@+id/guideline4"
			app:layout_constraintTop_toBottomOf="@+id/textInputLayout7">
			
			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/email_edit_Text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:autofillHints="email"
				android:fontFamily="sans-serif-light"
				android:hint="@string/email_address"
				android:imeOptions="actionNext"
				android:inputType="textEmailAddress"
				android:maxLines="1"
				tools:targetApi="o" />
		
		</com.google.android.material.textfield.TextInputLayout>
		
		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/textInputLayout9"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			app:hintTextColor="@color/colorAccent"
			app:layout_constraintEnd_toStartOf="@+id/guideline5"
			app:layout_constraintStart_toStartOf="@+id/guideline4"
			app:layout_constraintTop_toBottomOf="@+id/textInputLayout8"
			app:passwordToggleEnabled="true">
			
			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/password_edit_Text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:autofillHints="password"
				android:fontFamily="sans-serif-light"
				android:hint="@string/password"
				android:imeOptions="actionNext"
				android:inputType="textVisiblePassword"
				android:maxLines="1"
				tools:targetApi="o" />
		
		</com.google.android.material.textfield.TextInputLayout>
		
		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/textInputLayout10"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			app:hintTextColor="@color/colorAccent"
			app:layout_constraintEnd_toStartOf="@+id/guideline5"
			app:layout_constraintStart_toStartOf="@+id/guideline4"
			app:layout_constraintTop_toBottomOf="@+id/textInputLayout9"
			app:passwordToggleEnabled="true">
			
			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/confirm_password_edit_Text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:autofillHints="password"
				android:fontFamily="sans-serif-light"
				android:hint="@string/confirm_password"
				android:imeOptions="actionNext"
				android:inputType="textVisiblePassword"
				android:maxLines="1"
				tools:targetApi="o" />
		
		</com.google.android.material.textfield.TextInputLayout>
		
		<com.hbb20.CountryCodePicker
			android:id="@+id/country_code_picker"
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			app:ccp_autoDetectCountry="true"
			app:ccp_autoDetectLanguage="true"
			app:ccp_autoFormatNumber="false"
			app:ccp_countryAutoDetectionPref="SIM_NETWORK_LOCALE"
			app:ccp_hintExampleNumber="true"
			android:gravity="center_vertical"
			app:ccp_hintExampleNumberType="PERSONAL_NUMBER"
			app:layout_constraintBottom_toBottomOf="@+id/textInputLayout5"
			app:layout_constraintStart_toStartOf="@+id/guideline4"
			app:layout_constraintTop_toTopOf="@+id/textInputLayout5" />
		
		
		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/textInputLayout5"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="20dp"
			app:hintTextColor="@color/colorAccent"
			app:layout_constraintEnd_toStartOf="@+id/guideline5"
			app:layout_constraintStart_toEndOf="@+id/country_code_picker"
			app:layout_constraintTop_toBottomOf="@+id/textInputLayout10">
			
			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/phone_number_edit_Text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:autofillHints="phoneNumber"
				android:fontFamily="sans-serif-light"
				android:hint="@string/phone_number"
				android:imeOptions="actionDone"
				android:inputType="phone"
				android:maxLines="1"
				tools:targetApi="o" />
		
		</com.google.android.material.textfield.TextInputLayout>
		
		<de.hdodenhof.circleimageview.CircleImageView
			android:id="@+id/picture_image_view"
			android:layout_width="80dp"
			android:layout_height="80dp"
			android:layout_marginTop="20dp"
			android:src="@drawable/placeholder"
			app:layout_constraintStart_toStartOf="@+id/guideline4"
			app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />
		
		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/picture_text_view"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:background="?android:attr/selectableItemBackground"
			android:clickable="true"
			android:focusable="true"
			android:gravity="center_vertical|start"
			android:paddingStart="16dp"
			android:paddingEnd="0dp"
			android:text="@string/change_profile_picture"
			android:textColor="@color/colorAccent"
			app:layout_constraintBottom_toBottomOf="@+id/picture_image_view"
			app:layout_constraintEnd_toStartOf="@+id/guideline5"
			app:layout_constraintStart_toEndOf="@+id/picture_image_view"
			app:layout_constraintTop_toTopOf="@+id/picture_image_view" />
		
		<com.google.android.material.button.MaterialButton
			android:id="@+id/sign_up_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:backgroundTint="@color/colorAccent"
			android:paddingStart="72dp"
			android:paddingTop="12dp"
			android:paddingEnd="72dp"
			android:paddingBottom="12dp"
			android:text="@string/sign_up"
			android:textColor="@android:color/white"
			app:layout_constraintEnd_toStartOf="@+id/guideline5"
			app:layout_constraintStart_toStartOf="@+id/guideline4"
			app:layout_constraintTop_toBottomOf="@+id/picture_image_view" />
		
		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/or_sign_in_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:layout_marginTop="8dp"
			android:background="?android:attr/selectableItemBackground"
			android:clickable="true"
			android:focusable="true"
			android:paddingStart="8dp"
			android:paddingTop="8dp"
			android:paddingEnd="0dp"
			android:paddingBottom="8dp"
			android:text="@string/or_sign_in"
			android:textColor="@color/colorAccent"
			app:layout_constraintEnd_toStartOf="@+id/guideline5"
			app:layout_constraintTop_toBottomOf="@+id/sign_up_button" />
		
		<include
			android:id="@+id/divider"
			layout="@layout/content_divider"
			android:layout_width="0dp"
			android:layout_height="1dp"
			android:layout_marginTop="16dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/or_sign_in_text_view" />
		
		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/materialTextView5"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="16dp"
			android:text="@string/sign_up_with"
			app:layout_constraintEnd_toStartOf="@+id/guideline5"
			app:layout_constraintStart_toStartOf="@+id/guideline4"
			app:layout_constraintTop_toBottomOf="@+id/divider" />
		
		<ImageView
			android:id="@+id/sign_up_with_google_image_view"
			android:layout_width="44dp"
			android:layout_height="44dp"
			android:layout_marginTop="12dp"
			android:contentDescription="@string/sign_in_with_google"
			android:padding="4dp"
			android:src="@mipmap/google_circular"
			app:layout_constraintEnd_toStartOf="@id/sign_up_with_facebook_image_view"
			app:layout_constraintHorizontal_chainStyle="packed"
			app:layout_constraintStart_toStartOf="@+id/guideline4"
			app:layout_constraintTop_toBottomOf="@+id/materialTextView5" />
		
		<ImageView
			android:id="@+id/sign_up_with_facebook_image_view"
			android:layout_width="44dp"
			android:layout_height="44dp"
			android:layout_marginStart="16dp"
			android:contentDescription="@string/sign_in_with_facebook"
			android:padding="4dp"
			android:src="@mipmap/facebook_circular"
			app:layout_constraintBottom_toBottomOf="@+id/sign_up_with_google_image_view"
			app:layout_constraintEnd_toStartOf="@id/sign_up_with_twitter_image_view"
			app:layout_constraintStart_toEndOf="@+id/sign_up_with_google_image_view"
			app:layout_constraintTop_toTopOf="@+id/sign_up_with_google_image_view" />
		
		<ImageView
			android:id="@+id/sign_up_with_twitter_image_view"
			android:layout_width="44dp"
			android:layout_height="44dp"
			android:layout_marginStart="16dp"
			android:contentDescription="@string/sign_in_with_twitter"
			android:padding="4dp"
			android:src="@mipmap/twitter_circular"
			app:layout_constraintBottom_toBottomOf="@+id/sign_up_with_facebook_image_view"
			app:layout_constraintEnd_toStartOf="@+id/guideline5"
			app:layout_constraintStart_toEndOf="@+id/sign_up_with_facebook_image_view"
			app:layout_constraintTop_toTopOf="@+id/sign_up_with_facebook_image_view" />
	
	
	</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>